# ldif

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  LICENSE  Makefile  README.md  README.rst  ldif.py  pyproject.toml  ruff.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yaml
docs/: conf.py  index.rst  readme.rst
src/: ldif.py
tests/: common.py  test_parser.py  test_writer.py
