[tool.poetry]
name = "ldif"
version = "4.1.2"
description = "generate and parse LDIF data (see RFC 2849)."
license = "BSD"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
]
homepage = "https://github.com/abilian/ldif"
documentation = "https://ldif.readthedocs.io/en/latest/"
authors = ["Abilian SAS <dev@abilian.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
# Testing
pytest = "*"
pytest-randomly = "^3.5.0"
pytest-cov = "*"
coveralls = "*"
typeguard = "^2.10.0"

# Linting
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-mutable = "*"
flake8-pytest = "*"
flake8-super-call = "*"
flake8-tidy-imports = "*"
mastool = "*"
mccabe = "*"
mypy = "*"

# Formatting
isort = "*"
black = "*"

# Other tools
pre-commit = "*"
safety = "*"

# Needed for some reason
pyyaml = "*"

# Doc
sphinx = "*"
sphinx-rtd-theme = "*"
restructuredtext_lint = "*"
recommonmark = "*"
portray = "^1.7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"


[tool.coverage.run]
# parallel = true
# branch = true
source = ["ldif"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    # PyPy is unacceptably slow under coverage.
    "if PYPY:",
]
