[project]
authors = [
    {name = "Abilian SAS", email = "dev@abilian.com"},
]
license = {text = "BSD"}
requires-python = "<4.0,>=3.9"
dependencies = []
name = "ldif"
version = "4.3.0"
description = "generate and parse LDIF data (see RFC 2849)."
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
]
readme = "README.md"

[project.urls]
homepage = "https://github.com/abilian/ldif"
documentation = "https://ldif.readthedocs.io/en/latest/"

[dependency-groups]
dev = [
    "abilian-devtools<1.0,>=0.5",
    "pytest-randomly",
    "coveralls",
    "typeguard",
    "sphinx",
    "sphinx-rtd-theme",
    "restructuredtext-lint",
    "recommonmark",
    "docformatter<2.0.0,>=1.6.0",
    "pyrefly>=0.33.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.coverage.run]
# parallel = true
# branch = true
source = ["ldif"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  # PyPy is unacceptably slow under coverage.
  "if PYPY:",
]
